--- a/test-output/ExtentReport1.1.html
+++ b/test-output/ExtentReport1.1.html
@@ -44,7 +44,7 @@
 		<!-- nav-right -->
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<a href='#!'>
-			<span class='label blue darken-3 suite-start-time'>Dec 26, 2023 01:10:31 AM</span>
+			<span class='label blue darken-3 suite-start-time'>Dec 26, 2023 09:10:54 PM</span>
 			</a>
 		</ul>
 	</div>
@@ -126,14 +126,14 @@
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='1'>
 					<div class='test-heading'>
 						<span class='test-name'>simpleFormTest</span>
-						<span class='test-time'>Dec 26, 2023 01:10:31 AM</span>
+						<span class='test-time'>Dec 26, 2023 09:10:54 PM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Dec 26, 2023 01:10:31 AM</span>
-	<span class='label end-time'>Dec 26, 2023 01:10:31 AM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 0s+17ms</span>
+	<span class='label start-time'>Dec 26, 2023 09:10:54 PM</span>
+	<span class='label end-time'>Dec 26, 2023 09:10:55 PM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 0s+15ms</span>
 </div>
 <div class='test-steps'>
 	<table class='bordered table-results'>
@@ -147,7 +147,7 @@
 		<tbody>
 			<tr class='log' status='info'>
 				<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-				<td class='timestamp'>1:10:31 AM</td>
+				<td class='timestamp'>9:10:55 PM</td>
 				<td class='step-details'>
 						entering test
 					
@@ -155,7 +155,7 @@
 			</tr>
 			<tr class='log' status='pass'>
 				<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-				<td class='timestamp'>1:10:31 AM</td>
+				<td class='timestamp'>9:10:55 PM</td>
 				<td class='step-details'>
 						test passed
 					
@@ -206,19 +206,19 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>Dec 26, 2023 01:10:31 AM</div>
+					<div class='panel-lead'>Dec 26, 2023 09:10:54 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>Dec 26, 2023 01:10:31 AM</div>
+			 		<div class='panel-lead'>Dec 26, 2023 09:10:55 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>0h 0m 0s+152ms</div>
+					<div class='panel-lead'>0h 0m 0s+335ms</div>
 				</div>
 			</div>
 		</div>
@@ -261,7 +261,7 @@
 		</script>
 		<script>
 			var timeline = {
-			        "simpleFormTest":0.017
+			        "simpleFormTest":0.015
 			};
 		</script>
 		<script src='https://cdn.rawgit.com/extent-framework/extent-github-cdn/b65cd69/v3html/js/extent.js' type='text/javascript'></script>
