--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a4858c">  <td>23/12/27 01:41:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WindowPopUpTest.windowPopUp()[pri:0, instance:Test.WindowPopUpTest@58cbafc2]">windowPopUp</td> 
+<tr bgcolor="a4858c">  <td>23/12/28 01:30:18</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;RadioButtonTest.closeTest()[pri:0, instance:Test.RadioButtonTest@58cbafc2]">&lt;&lt;closeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1732238286</td>   <td></td> </tr>
+<tr bgcolor="a4858c">  <td>23/12/28 01:30:08</td>   <td>-9748</td> <td>&nbsp;</td><td title="&gt;&gt;RadioButtonTest.setUp(java.lang.String)[pri:0, instance:Test.RadioButtonTest@58cbafc2]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1732238286</td>   <td></td> </tr>
+<tr bgcolor="a4858c">  <td>23/12/28 01:30:12</td>   <td>-5645</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RadioButtonTest.radioBtnTest()[pri:0, instance:Test.RadioButtonTest@58cbafc2]">radioBtnTest</td> 
   <td>main@1732238286</td>   <td></td> </tr>
-<tr bgcolor="a4858c">  <td>23/12/27 01:41:23</td>   <td>-2935</td> <td>&nbsp;</td><td title="&gt;&gt;WindowPopUpTest.setUp(java.lang.String)[pri:0, instance:Test.WindowPopUpTest@58cbafc2]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1732238286</td>   <td></td> </tr>
-<tr bgcolor="a4858c">  <td>23/12/27 01:41:41</td>   <td>14948</td> <td>&nbsp;</td><td title="&lt;&lt;WindowPopUpTest.closeTest()[pri:0, instance:Test.WindowPopUpTest@58cbafc2]">&lt;&lt;closeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1732238286</td>   <td></td> </tr>
 </table>
