--- a/test-output/ExtentReportone.html
+++ b/test-output/ExtentReportone.html
@@ -44,7 +44,7 @@
 		<!-- nav-right -->
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<a href='#!'>
-			<span class='label blue darken-3 suite-start-time'>Dec 27, 2023 09:25:31 PM</span>
+			<span class='label blue darken-3 suite-start-time'>Dec 31, 2023 11:12:30 PM</span>
 			</a>
 		</ul>
 	</div>
@@ -123,16 +123,16 @@
 </div>	<div class='subview-left left'>
 		<div class='view-summary'>
 			<ul id='test-collection' class='test-collection'>
-				<li class='test displayed active  pass' status='pass' bdd='false' test-id='2'>
+				<li class='test displayed active  pass' status='pass' bdd='false' test-id='1'>
 					<div class='test-heading'>
-						<span class='test-name'>jsPromptTest</span>
-						<span class='test-time'>Dec 27, 2023 09:25:34 PM</span>
+						<span class='test-name'>Ajax Form Test</span>
+						<span class='test-time'>Dec 31, 2023 11:12:37 PM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Dec 27, 2023 09:25:34 PM</span>
-	<span class='label end-time'>Dec 27, 2023 09:25:34 PM</span>
+	<span class='label start-time'>Dec 31, 2023 11:12:37 PM</span>
+	<span class='label end-time'>Dec 31, 2023 11:12:37 PM</span>
 	<span class='label time-taken grey lighten-1 white-text'>0h 0m 0s+0ms</span>
 </div>
 					</div>
@@ -177,19 +177,19 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>Dec 27, 2023 09:25:31 PM</div>
+					<div class='panel-lead'>Dec 31, 2023 11:12:30 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>Dec 27, 2023 09:25:36 PM</div>
+			 		<div class='panel-lead'>Dec 31, 2023 11:12:39 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>0h 0m 5s+249ms</div>
+					<div class='panel-lead'>0h 0m 9s+70ms</div>
 				</div>
 			</div>
 		</div>
@@ -232,7 +232,7 @@
 		</script>
 		<script>
 			var timeline = {
-			        "jsPromptTest":0
+			        "Ajax Form Test":0
 			};
 		</script>
 		<script src='https://cdn.rawgit.com/extent-framework/extent-github-cdn/b65cd69/v3html/js/extent.js' type='text/javascript'></script>
